orange-box (1.77) unreleased; urgency=medium

  * usr/bin/orange-box-bootstrap-juju:
    - deploy the latest juju-gui from the charmstore
    - one day, we'll be able to do this entirely offline (hopefully)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 03 Sep 2014 14:14:02 -0500

orange-box (1.76-0ubuntu1) utopic; urgency=medium

  * usr/bin/orange-box-setup-nat:
    - 14.10 deprecates the iptables-persistent service in favor of
      netfilter-persistent

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 03 Sep 2014 14:14:01 -0500

orange-box (1.75-0ubuntu1) utopic; urgency=medium

  * debian/postinst:
    - work around bug in MAAS 1.7 that outputs the python version on
      stdout

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 03 Sep 2014 13:41:19 -0500

orange-box (1.74-0ubuntu1) utopic; urgency=medium

  * usr/bin/orange-box-add-virtual-nodes:
    - add a second, small, 2G disk to our VM images for Landscape

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 27 Aug 2014 18:18:04 -0500

orange-box (1.73-0ubuntu1) utopic; urgency=medium

  * debian/postinst:
    - only create cache dirs if necessary

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 25 Aug 2014 11:41:47 -0500

orange-box (1.72-0ubuntu1) utopic; urgency=medium

  * debian/postinst, usr/bin/orange-box-setup-nat:
    - use squid3, not squid-deb-proxy
    - this should line us up better with where we're going in MAAS

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 25 Aug 2014 11:19:59 -0500

orange-box (1.71-0ubuntu1) utopic; urgency=medium

  * debian/postinst:
    - ensure that squid-deb-proxy is running

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 25 Aug 2014 10:04:16 -0500

orange-box (1.70-0ubuntu1) utopic; urgency=medium

  * debian/postinst, usr/bin/orange-box-sync-charmstore:
    - silence our (rather noisy) bzr branching and pulling
  * debian/postinst, debian/preinst:
    - stop and restart more safely
  * debian/control: